minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__vector_type_3.snap
---
source: minigu/gql/parser/src/parser/impls/type_element.rs
assertion_line: 1037
expression: parsed
---
- Vector:
    dimension:
      - kind: Decimal
        integer: "4"
      - start: 7
        end: 8
    not_null: false
- start: 0
  end: 9
